# crewai-curriculum-build-test

./: README.md  pyproject.toml  report.md
knowledge/: custom_outline_instructions.txt
output/: crew_log.md.txt  enriched-microlesson-content-non-tech.md  enriched-microlesson-content-technical.md  enriched-microlesson-content.md  microlesson-content-from-sme-non-tech.md  microlesson-content-from-sme-technical.md  microlesson-content-from-sme.md  module-outline.md
src/curriculum_test/: crew.py  main.py
src/curriculum_test/config/: agents.yaml  tasks.yaml
