[project]
name = "curriculum_test"
version = "0.1.0"
description = "curriculum-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
curriculum_test = "curriculum_test.main:run"
run_crew = "curriculum_test.main:run"
train = "curriculum_test.main:train"
replay = "curriculum_test.main:replay"
test = "curriculum_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
